--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+/** @format */
+
+.main {
+  position: relative;
+  display: flex;
+  border-style: solid;
+  height: 40rem;
+  margin: 10px 0 auto 0;
+}
+.controlFields {
+  width: 50px;
+  margin: 3px 10px 3px 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hexColorFields {
+  width: 60px;
+  margin: 3px 10px 3px 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fieldLabelCont {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.controlRows {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 5px 0 5px 0;
+}
+
+.controlColumns {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 100%;
+}
+.submitControlRow {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.marginControlRows {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.controlsCont {
+  background-color: white;
+  z-index: 1000;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  margin: 10px;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  width: fit-content;
 }
