Added ability to create children components under the root component. Added a button component to the list Controls allow for multiple section/button components to be added to the root. Adjusted store to allow storage of the state of both components.

--- a/src/App.css
+++ b/src/App.css
@@ -66,10 +66,16 @@
   flex-direction: column;
   border-style: solid;
   border-color: black;
+  border-radius: 5px;
   border-width: 1px;
   margin: 10px;
   right: 0;
   bottom: 0;
   padding: 20px;
   width: fit-content;
+}
+
+.notice {
+  font-size: 10px;
+  padding: 0 0 0 10px;
 }
