--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
 /** @format */
 
 .main {
-  display: block;
+  display: flex;
+  flex-direction: row;
   border-style: solid;
+  border-width: 1px;
+  border-radius: 10px 0 0 10px;
+  margin: 0 50px 0 50px;
+  overflow: hidden;
+}
+
+.productionArea {
+  position: relative;
+  width: 100%;
+  overflow-y: scroll;
 }
 
 .header {
@@ -21,11 +32,19 @@
 }
 .buttonName {
   margin: 3px 10px 3px 5px;
+  width: 80px;
 }
 
 .hexColorFields {
+  position: relative;
   width: 60px;
   margin: 3px 10px 3px 5px;
+}
+
+.colorPicker {
+  position: absolute;
+  left: 100%;
+  bottom: 100%;
 }
 
 .controlLabel {
@@ -80,15 +99,15 @@
 
 .controlsCont {
   background-color: white;
-  z-index: 1000;
-  position: absolute;
+  z-index: 100;
+  /*position: absolute;*/
   display: flex;
   flex-direction: column;
-  border-style: solid;
+  border-style: none solid none none;
   border-color: black;
-  border-radius: 5px;
+
   border-width: 1px;
-  margin: 10px;
+
   padding: 0 20px 20px 20px;
   width: fit-content;
 }
@@ -99,8 +118,11 @@
 }
 
 .instructions {
-  display: none;
+  position: absolute;
+  display: block;
+  background-color: #ffffff;
   border-style: solid;
+  z-index: 300;
   margin: 5% 20% auto 20%;
   padding: 25px;
   border-radius: 20px;
